src/style.css
:root{
    --main-font: 'Source Serif Pro', serif;
    --secondary-font: 'East Sea Dokdo';
}

#player1GameTile, #player2GameTile{
    background-color: #8C6636;
    width: 100%;
    height: 100%;
    margin: 0;
    border: 1px solid black;
    cursor: pointer;
    display: grid;
    place-content: center;
    box-sizing: border-box;
}
#player1GameTile:hover, #player2GameTile:hover{
    background-color: #8C4236;
}


#player1GameTile.hit, #player2GameTile.hit{
    background-color: #5B2820;
}



.gameContainer1, .gameContainer2{
    margin: 1rem;
    width: 42rem;
    height: 42rem;
    place-items: center;
    display: none;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: repeat(11, 1fr);

}
.logo{
    font-size:  6rem;
    font-family: var(--secondary-font);
    margin-bottom: 50px;
    padding: 20px;
    transform: translateZ(60px);
    
}

#player1Header, #player2Header{
    grid-column: 1/-1;
    font-size: 2rem;
    height: auto;
    font-family: var(--main-font);
    
}

.hitImage{
    width: 90%;
    height: 90%;
    background-size: 80%;
    background-repeat: no-repeat;
    background-position: center;
}

.formContainer{
    position: fixed;
    background-color: #8C4236;
    z-index: 3;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: transform 1s ease-in-out;
}

.shipFormContainer{
    position: fixed;
    background-color: #8C7936;
    z-index: 2;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    opacity: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transform: translateY( 100vh) rotate(180deg);
    transition: transform 1s ease-in-out;
}

.shipFormContainer.moved{
    transform: translateY( 0vh) rotate(0deg);
    opacity: 1;
}
.shipFormContainer.moved.slideDown{
    transform: translateY(-100vh) rotate(180deg);
    opacity: 1;
}

.formContainer.moved{
    transform: translateY( 100vh) rotate(180deg);
}

#form, #shipForm{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding:30px;
    border-radius: 30px;
    transform-style: preserve-3d;
    transform: perspective(1000px);
}

#playerTurn{
    font-family: var(--main-font);
    font-size: 3.5rem;
    margin-top: 20px;
    border-bottom: 1px solid black;
    
    
}

#player1Score, #player2Score{
    font-family: var(--main-font);
    font-size: 1.5rem;
    margin: 15px;
}

.header{
    grid-column: 1/ -1;
    text-align: center;
    background-color: #28683B;
    border-radius: 2rem;
    box-shadow: 1px 1px 10px rgb(53, 53, 53);
    display: none;
    flex-direction: column;
    align-items: center;
    padding: 10px;
    margin: 30px;
    width: 50%;
}

input[type="text"], input[type="number"]{
    width: 70%;
    height: 3rem;
    background-color:  transparent;
    border: none;
    border-bottom: 1px solid black;
    margin-bottom: 20px;
    text-align: center;
    font-family: var(--main-font);
    font-size: 2rem;
}

input[type="text"]:focus,  input[type="number"]:focus{
    outline: none;
}

h1{
    margin-bottom: 20px;
    font-family: var(--main-font);
    font-size: 2rem;
}

button{
    width: 200px;
    height: 50px;
    background-color: #28683B;
    box-shadow: 2px 2px 2px rgb(53, 53, 53);
    cursor: pointer;
    border: none;
}

label{
    font-family: var(--main-font);
    font-size: 1.4rem;
}

img{
    width: 30px;
}

body{
    background-color: #264559;
    display: grid;
    grid-template-rows: 1fr 5fr;
    grid-template-columns: 1fr 1fr;
    place-items: center;
    height: 100vh;
    width: 100%;
}

